--- a/examples/lua/envoy.yaml
+++ b/examples/lua/envoy.yaml
@@ -19,18 +19,18 @@ static_resources:
               domains:
               - "*"
               routes:
-              - match:
-                  prefix: "/multiple/lua/scripts"
-                route:
-                  cluster: web_service
-                typed_per_filter_config:
-                  lua_filter_with_custom_name_1:
-                    "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
-                    source_code:
-                      inline_string: |
-                        function envoy_on_response(response_handle)
-                          response_handle:headers():add("header_key_1", "header_value_1")
-                        end
+              #- match:
+              #    prefix: "/"
+              #  route:
+              #    cluster: web_service
+              #  typed_per_filter_config:
+              #    lua_filter_with_custom_name_1:
+              #      "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.LuaPerRoute
+              #      source_code:
+              #        inline_string: |
+              #          function envoy_on_response(response_handle)
+              #            response_handle:headers():add("header_key_1", "header_value_1")
+              #          end
               - match:
                   prefix: "/"
                 route:
@@ -40,15 +40,26 @@ static_resources:
             typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
               default_source_code:
-                inline_string:
-                  local mylibrary = require("lib.mylibrary")
-
+                inline_string: |
                   function envoy_on_request(request_handle)
-                    request_handle:headers():add("foo", mylibrary.foobar())
+                    --request_handle:headers():add("foo", mylibrary.foobar())
+                    require("resty_ffi")
+                    local demo = ngx.load_ffi("ffi_go_echo")
+                    local ok, res = demo:foobar("foobar", request_handle)
+                    assert(ok)
+                    assert(res == "foobar")
+                    local demo = ngx.load_ffi("resty_ffi_python", "ffi.echo?,init", {is_global = true})
+                    local ok, res = demo:echo("hello", request_handle)
+                    assert(ok)
+                    assert(res == "hello")
                   end
           - name: lua_filter_with_custom_name_1
             typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
+              default_source_code:
+                inline_string:
+                  function envoy_on_request(request_handle)
+                  end
           - name: envoy.filters.http.router
             typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
@@ -64,5 +75,5 @@ static_resources:
         - endpoint:
             address:
               socket_address:
-                address: web_service
-                port_value: 8080
+                address: 139.162.123.134
+                port_value: 80
